added custom font support

--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
@@ -147,10 +147,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="NanoLog.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="simple32.h" />
+    <ClInclude Include="windows_util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="NanoLog.cpp" />
     <ClCompile Include="PasswordGenerator.cpp" />
   </ItemGroup>
   <ItemGroup>
