--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClInclude Include="simple32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="windows_util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NanoLog.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PasswordGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NanoLog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
