--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="main_window.h" />
     <ClInclude Include="NanoLog.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="simple32.h" />
