--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="NanoLog.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="main_window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PasswordGenerator.cpp">
