refactor win32 code

--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="windows_util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="main_window.cpp" />
     <ClCompile Include="NanoLog.cpp" />
     <ClCompile Include="PasswordGenerator.cpp" />
   </ItemGroup>
