--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="NanoLog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main_window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PasswordGenerator.rc">
