check dwm support

--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="dwm_main_window.h" />
     <ClInclude Include="main_window.h" />
     <ClInclude Include="NanoLog.hpp" />
     <ClInclude Include="resource.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="windows_util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="dwm_main_window.cpp" />
     <ClCompile Include="main_window.cpp" />
     <ClCompile Include="NanoLog.cpp" />
     <ClCompile Include="PasswordGenerator.cpp" />
