--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="main_window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dwm_main_window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PasswordGenerator.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main_window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dwm_main_window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
