refactor window class

--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="simple32.h" />
     <ClInclude Include="windows_util.h" />
+    <ClInclude Include="wingui.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dwm_main_window.cpp" />
