--- a/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
+++ b/PasswordGenerator/PasswordGenerator/PasswordGenerator.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="dwm_main_window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="wingui.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PasswordGenerator.cpp">
